# edge-runtime

./: .gitignore  Cargo.toml  IMPLEMENTATION_REPORT.md  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/edge-runtime-common/: Cargo.toml
crates/edge-runtime-common/src/: config.rs  config_file.rs  error.rs  lib.rs
crates/edge-runtime-core/: Cargo.toml
crates/edge-runtime-core/src/: engine.rs  instance.rs  lib.rs  module.rs  store.rs
crates/edge-runtime-core/tests/: integration.rs
crates/edge-runtime-host/: Cargo.toml
crates/edge-runtime-host/src/: http_outbound.rs  lib.rs  linker.rs  logging.rs  permissions.rs
crates/edge-runtime-server/: Cargo.toml
crates/edge-runtime-server/src/: admin.rs  handler.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  state.rs
examples/: build.sh
examples/assemblyscript/: asconfig.json  package-lock.json  package.json
examples/assemblyscript/assembly/: index.ts
examples/rust/fibonacci/: Cargo.toml
examples/rust/fibonacci/src/: lib.rs
examples/rust/hello/: Cargo.toml
examples/rust/hello/src/: lib.rs
examples/rust/logging/: Cargo.toml
examples/rust/logging/src/: lib.rs
examples/rust/memory/: Cargo.toml
examples/rust/memory/src/: lib.rs
examples/zig/hello/: main.zig
src/: main.rs
test-modules/: log.wasm  loop.wasm  trap.wasm
wit/: world.wit
wit/interfaces/: http-outbound.wit  logging.wit
