[package]
name = "edge-runtime-common"
description = "Common types, errors, and utilities for edge-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
