[package]
name = "edge-runtime-core"
description = "Core Wasmtime runtime for edge-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
edge-runtime-common.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true

tokio.workspace = true
tracing.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
edge-runtime-host.workspace = true

[lints]
workspace = true
