[package]
name = "edge-runtime-host"
description = "Host functions implementation for edge-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
edge-runtime-common.workspace = true
edge-runtime-core.workspace = true

wasmtime.workspace = true

tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
