[package]
name = "edge-runtime-server"
description = "HTTP server for edge-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal crates
edge-runtime-common.workspace = true
edge-runtime-core.workspace = true
edge-runtime-host.workspace = true

# Wasmtime
wasmtime.workspace = true

# HTTP Server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true

# Utilities
uuid.workspace = true
dashmap.workspace = true
bytes = "1.5"

[dev-dependencies]
tokio-test.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
